# WidgetNotionSimple

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
src/: main.py
