[project]
name = "flet-gha-example"
version = "0.1.0"
description = "A simple Flet app, built by GitHub Actions."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "TheEthicalBoy", email = "me@ethicalboy.com" }
]

dependencies = [
    "flet==0.80.0"
]

[dependency-groups]
dev = []

# Docs: https://docs.flet.dev/publish

[tool.flet]
build_number = 1
product = "Flet GHA Example"

[tool.flet.app]
path = "src"