[project]
name = "flet-gha-example"
version = "0.1.0"
description = "A simple Flet app, built by GitHub Actions."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "TheEthicalBoy", email = "me@ethicalboy.com" }
]

dependencies = [
    "flet"
]

[dependency-groups]
dev = []

# Docs: https://docs.flet.dev/publish

[tool.flet]
build_number = 1
product = "Flet GHA Example"

[tool.flet.web]
dependencies = [
    "httpx",
    "oauthlib"
]
[tool.flet.app]
path = "src"